tests/invalid/gh72_errors.err_exp2
gh72_errors.m:152: Error: duplicate `:- pragma foreign_proc' declaration for
gh72_errors.m:152:   this mode of predicate `test_fproc_2'/5 in Java.
gh72_errors.m:136: The first one was here.
